# smart_denoise_rs

./: Cargo.toml  README.md  build.rs  compiled_opt.spv  compiled_unopt.spv
src/: denoise_compute.rs  denoise_frag.rs  denoise_shader.rs  denoise_shader_compiled.rs  denoise_shader_frag.rs  denoise_shader_gray.rs  denoise_shader_gray_compiled.rs  denoise_shader_rgba.rs  lib.rs  main.rs  vertex_shader.rs
templates/: denoise_shader.mustache  denoise_shader_radial.mustache  denoise_shader_smart.mustache  mod.rs
