[package]
name = "smart_denoise"
version = "0.1.0"
edition = "2021"

[dependencies]
png = "*"
image = "*"
vulkano = "0.29"
vulkano-shaders = "0.29"
bytemuck = "*"
num-traits = "0.2"
byteorder = "*"
rayon = "*"
clap = { version = "^3", features = ["derive"] }

[build-dependencies]
handlebars = "*"

[profile.release]
opt-level = 3
codegen-units = 16
debug = true
panic = 'abort'

[profile.release.build-override]
opt-level = 3
codegen-units = 16

[features]
skip_gen = []